--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
-*{
+*
+{
     margin: 0;
     padding: 0;
     font-family: poppins;
 }
-li,a{
+
+li,
+a
+{
     text-decoration: none;
     list-style: none;
 }
-header{
-    background-color:#be3144;
+
+header
+{
+    background-color: #be3144;
 }
 
-.header-nav{
+.header-nav
+{
     display: flex;
     justify-content: space-between;
     height: 50px;
@@ -20,13 +27,17 @@ header{
 }
 
 
-.header-nav ul{
+.header-nav ul
+{
     display: flex;
 }
-.header-nav ul li{
+
+.header-nav ul li
+{
     margin: 0 1em;
-    
+
 }
+
 .header-nav a
 {
     padding: 0 1em;
@@ -34,8 +45,31 @@ header{
     font-weight: 400;
     font-size: 1.4em;
 }
+
 .header-nav a:hover
 {
     padding: 1.1em 1.0em;
-    background-color:#45567d;
+    background-color: #45567d;
+}
+
+.bgimage
+{
+    display: flex;
+    background-color: #000;
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    height: 600px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.welcome-msg h2{
+    font-size: 3.5em;
+    color: white;
+}
+.welcome-msg p
+{
+    font-size: 2.5em;
+    color: #be3144;
+    font-style: italic;
+    font-weight: 300;
 }
