--- a/style.css
+++ b/style.css
@@ -104,11 +104,13 @@ header
 {
     display: flex;
     justify-content: space-between;
-    border: 1px red solid;
+
     margin: 0 2em;
 
 }
-.card{
+
+.card
+{
     margin: 0 1em;
 }
 
@@ -127,4 +129,68 @@ header
     color: white;
     padding: 1.0em 0;
     align-self: center;
+}
+
+.contact-me
+{
+
+    margin-top: 6em;
+    background-color: #303841;
+
+    height: 600px;
+    align-items: center;
+    text-align: center;
+}
+
+.social-media
+{
+    display: flex;
+
+    justify-content: center;
+
+}
+
+.social-media a
+{
+
+    padding: 0.5em;
+    font-size: 2em;
+    color: aliceblue;
+
+}
+
+.contact-header h1
+{
+    font-size: 4em;
+    color: aliceblue;
+    padding-top: 2em;
+}
+
+.contact-header p
+{
+    font-size: 1.5em;
+    font-weight: 300;
+    color: aliceblue;
+    padding-bottom: 2em;
+    font-style: italic;
+}
+
+footer
+{
+    border-top: #be3144 10px solid;
+    color: aliceblue;
+}
+
+footer>div
+{
+    margin: 1em 0;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 8em;
+    padding: 3em 0;
+}
+
+footer>div h1
+{
+    font-size: large;
 }
